# cardashbordDigital

d/DashBord_Digital_c/: CMakeLists.txt  DataDisplay.qml  StringWindow.qml  main.cpp  main.qml  qml.qrc  settinds.qml  statusbar.cpp  statusbar.h  userD.db
d/DashBord_Digital_c/DatatetKM/: CMakeLists.txt  dataEkm.cpp  dataEkm.h
d/DashBord_Digital_c/VheicleDataSender/: CMakeLists.txt  VheicleDataSender.cpp  VheicleDataSender.h  main.cpp
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-4d71badad81cc357466f.json  codemodel-v2-289237588d22521dfda2.json  directory-VheicleDataSender-Debug-945c9dbdf186270a537f.json  directory-user-Debug-52edeb7dbd2deab70ba6.json  index-2023-02-07T11-34-10-0160.json  target-DashBord_Digital-Debug-458870098e88ab93cf56.json  target-DashBord_Digital_autogen_timestamp_deps-Debug-1d03f11ab64766abf040.json  target-DashBord_Digital_qmlimportscan-Debug-85b83f0cec0233d5100d.json  target-DatatetKM_autogen-Debug-9a26705ebc65edf91fcd.json  target-VheicleDataSender-Debug-e451528dd6ebd875b0b9.json  target-user-Debug-7d3f5ea98cb4e5f5b893.json
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-d28c2e05af97286e303c.json  codemodel-v2-c3c0aaae9704046d48c4.json  directory-.-Debug-223e1f35345999f9a47a.json  directory-DatatetKM-Debug-2314564b11267b13ab49.json  index-2023-02-07T11-31-56-0518.json  target-DashBord_Digital-Debug-b4e725a4bc44a42dd25b.json  target-DashBord_Digital_autogen-Debug-0b3abd0f3a55dd442220.json  target-DashBord_Digital_autogen_timestamp_deps-Debug-6da8ac600d2ddbc68d4a.json  target-DatatetKM-Debug-74d1361f3a553d40895c.json  target-DatatetKM_autogen_timestamp_deps-Debug-2af2695a8ef2f40de60b.json  target-VheicleDataSender-Debug-c12545bd4441d45f0596.json  target-VheicleDataSender_autogen-Debug-6266412442060b7f39b3.json  target-VheicleDataSender_autogen_timestamp_deps-Debug-43a242de09d41f6841da.json  target-user-Debug-d541620cb8db3c35ff50.json  target-user_autogen-Debug-e733f6a8b6a1baa1324d.json  target-user_autogen_timestamp_deps-Debug-9196c539bbeda082d166.json
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: DashBord_Digital.cmake
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_DashBord_Digital.cmake  Qt6_QmlPlugins_Imports_DashBord_Digital.rsp
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/DashBord_Digital_autogen/: deps  moc_predefs.h
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/DatatetKM/: cmake_install.cmake
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/DatatetKM/DatatetKM_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/DatatetKM/DatatetKM_autogen/EWIEGA46WW/: moc_dataEkm.cpp  moc_dataEkm.cpp.d
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/VheicleDataSender/: cmake_install.cmake
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/VheicleDataSender/VheicleDataSender_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/VheicleDataSender/VheicleDataSender_autogen/EWIEGA46WW/: moc_VheicleDataSender.cpp  moc_VheicleDataSender.cpp.d
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/user/: cmake_install.cmake
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/user/user_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
d/DashBord_Digital_c/build-DashBord-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/user/user_autogen/EWIEGA46WW/: moc_userD.cpp  moc_userD.cpp.d
d/DashBord_Digital_c/settingsimg/: popbg2.avif  popbg3.jfif  popbg5.avif
d/DashBord_Digital_c/user/: CMakeLists.txt  userD.cpp  userD.h
(+71 files in other folders)
